crates/typecheck/tests/fixtures/errors/if_branch_mismatch.ax
fn main() { val x = if true { 1 } else { 2.0 } }